--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,17 @@ authors = [
     {name = "Mikiyas Mebrate",email = "mikiyasmebrate@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "django (==4.2.6)",
     "djangorestframework (>=3.15.2,<4.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "django-cors-headers (>=4.7.0,<5.0.0)",
-    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)"
+    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
+    "langchain (>=0.3.18,<0.4.0)",
+    "langchain-ollama (>=0.2.3,<0.3.0)",
+    "langchain-chroma (>=0.2.2,<0.3.0)",
+    "langchain-community (>=0.3.17,<0.4.0)"
 ]
 
 
