--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "langchain (>=0.3.18,<0.4.0)",
     "langchain-ollama (>=0.2.3,<0.3.0)",
     "langchain-chroma (>=0.2.2,<0.3.0)",
-    "langchain-community (>=0.3.17,<0.4.0)"
+    "langchain-community (>=0.3.17,<0.4.0)",
+    "pymupdf (>=1.25.3,<2.0.0)"
 ]
 
 
