--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "langchain-ollama (>=0.2.3,<0.3.0)",
     "langchain-chroma (>=0.2.2,<0.3.0)",
     "langchain-community (>=0.3.17,<0.4.0)",
-    "pymupdf (>=1.25.3,<2.0.0)"
+    "pymupdf (>=1.25.3,<2.0.0)",
+    "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
+    "python-magic-bin (>=0.4.14,<0.5.0)",
 ]
 
 
