--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pymupdf (>=1.25.3,<2.0.0)",
     "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
     "python-magic-bin (>=0.4.14,<0.5.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 
 
