--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-# Created by https://www.toptal.com/developers/gitignore/api/django
-# Edit at https://www.toptal.com/developers/gitignore?templates=django
-
-##Server
-*.ini
-*/uwsgi_params
-
-
 */chroma_db/
+*/uwsgi_params
+*/uwsgi-emperor.log
 ### Django ###
 *.log
 *.pot
@@ -17,6 +11,10 @@ local_settings.py
 core/db.sqlite3
 core/db.sqlite3-journal
 core/media/
+
+**/migrations/
+**/migrations/*.py
+!**/migrations/__init__.py
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
