--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "django-ckeditor (>=6.7.2,<7.0.0)",
     "python-decouple (>=3.8,<4.0)",
-    "firebase-admin (>=7.1.0,<8.0.0)"
+    "firebase-admin (>=7.1.0,<8.0.0)",
+    "django-axes[ipware] (>=8.0.0,<9.0.0)",
 ]
 
 
