--- a/core/uwsgi.ini
+++ b/core/uwsgi.ini
@@ -1,34 +1,19 @@
 [uwsgi]
-# Django project location
-chdir = /mnt/data/Digital_Hub/core
-module = project.wsgi:application
-home = /mnt/data/Digital_Hub/.venv
-
-# uWSGI process management
-master = true
-processes = 6
-threads = 2
-enable-threads = true
-lazy-apps = true
-vacuum = true
-
-# Socket for Nginx
-socket = /mnt/data/Digital_Hub/core/domains.sock
-chmod-socket = 660
-uid = www-data
-gid = www-data
-
-# Request & performance settings
-harakiri = 60                 # Kill requests taking longer than 60s
-max-requests = 5000           # Restart workers after this many requests
-max-requests-delta = 200      # Add randomness to avoid all restarting together
-reload-on-rss = 512           # Reload workers if memory >512MB
-thunder-lock = true           # Prevent thundering herd on accept()
-post-buffering = 8192         # Buffer small POST requests in memory
-
-# Logging
-logto = /mnt/data/Digital_Hub/core/uwsgi.log
-log-reopen = true
-
-# Optional: if you want GPU visibility
-# Environment=CUDA_VISIBLE_DEVICES=0  <-- you can keep or remove it safely
+# full path to Django project's root directory
+chdir           = /mnt/data/Digital_Hub/core/
+# Django's wsgi file
+module          = project.wsgi:application
+# full path to python virtual env
+home            = /mnt/data/Digital_Hub/.venv
+# enable uwsgi master process
+master          = true
+# maximum number of worker processes
+processes       = 10
+# the socket (use the full path to be safe)
+socket          = /mnt/data/Digital_Hub/core/domains.sock
+# socket permissions
+chmod-socket    = 660
+# clear environment on exit
+vacuum          = true
+# Remove or comment out daemonize when running under systemd
+# daemonize       = /mnt/data/ACS2/core/uwsgi-emperor.log
