--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "python-decouple (>=3.8,<4.0)",
     "firebase-admin (>=7.1.0,<8.0.0)",
     "django-axes[ipware] (>=8.0.0,<9.0.0)",
+    "python-socketio[asgi] (>=5.15.0,<6.0.0)",
+    "uvicorn (>=0.38.0,<0.39.0)",
 ]
 
 
