--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "django-axes[ipware] (>=8.0.0,<9.0.0)",
     "python-socketio[asgi] (>=5.15.0,<6.0.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
 ]
 
 
