--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,13 @@ authors = [
     {name = "Kaleab Hegie",email = "benjiyg400@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11,<4.0"
+requires-python = ">=3.10,<3.14"
 dependencies = [
     "django (==4.2.6)",
     "djangorestframework (>=3.15.2,<4.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
-    "langchain (>=0.3.18,<0.4.0)",
-    "langchain-ollama (>=0.2.3,<0.3.0)",
-    "langchain-chroma (>=0.2.2,<0.3.0)",
-    "langchain-community (>=0.3.17,<0.4.0)",
     "pymupdf (>=1.25.3,<2.0.0)",
     "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
     "python-dotenv (>=1.0.1,<2.0.0)",
@@ -26,8 +22,19 @@ dependencies = [
     "firebase-admin (>=7.1.0,<8.0.0)",
     "django-axes[ipware] (>=8.0.0,<9.0.0)",
     "python-socketio[asgi] (>=5.15.0,<6.0.0)",
-    "uvicorn (>=0.38.0,<0.39.0)",
-    "gunicorn (>=23.0.0,<24.0.0)",
+    "celery (>=5.6.0,<6.0.0)",
+    "pandas (>=2.3.3,<3.0.0)",
+    "uwsgi (>=2.0.31,<3.0.0)",
+    "langchain (>=1.1.3,<2.0.0)",
+    "langchain-milvus (>=0.3.1,<0.4.0)",
+    "langchain-text-splitters (>=1.0.0,<2.0.0)",
+    "langchain-community (>=0.4.1,<0.5.0)",
+    "langchain-classic (>=1.0.0,<2.0.0)",
+    "vllm (>=0.12.0,<0.13.0)",
+    "langchain-openai (>=1.1.3,<2.0.0)",
+    "sentence-transformers (>=5.2.0,<6.0.0)",
+    "langchain-huggingface (>=1.2.0,<2.0.0)",
+    "langchain-core (>=1.2.0,<2.0.0)",
 ]
 
 
