--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ dependencies = [
     "sentence-transformers (>=5.2.0,<6.0.0)",
     "langchain-huggingface (>=1.2.0,<2.0.0)",
     "langchain-core (>=1.2.0,<2.0.0)",
+    "channels[daphne] (>=4.3.2,<5.0.0)",
+    "daphne (>=4.2.1,<5.0.0)",
+    "channels-redis (>=4.3.0,<5.0.0)",
 ]
 
 
