--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "channels[daphne] (>=4.3.2,<5.0.0)",
     "daphne (>=4.2.1,<5.0.0)",
     "channels-redis (>=4.3.0,<5.0.0)",
+    "drf-user-activity-tracker (>=1.0.1,<2.0.0)",
+    "aiofiles (>=25.1.0,<26.0.0)",
 ]
 
 
